feat: list -> tree